# tvrenamer

./: .coveragerc  .gitignore  .travis.yml  ChangeLog  README.md  README.rst  Vagrantfile  plugins.txt  requirements.txt  setup.cfg  tasks.py  test-requirements.txt  tox.ini
doc/source/: ChangeLog.rst  ToDo.rst  conf.py  index.rst
doc/source/api/: autoindex.rst  tvrenamer.cli.rst  tvrenamer.common._titlecase.rst  tvrenamer.common.tools.rst  tvrenamer.constants.rst  tvrenamer.core.episode.rst  tvrenamer.core.formatter.rst  tvrenamer.core.parser.rst  tvrenamer.core.patterns.rst  tvrenamer.core.renamer.rst  tvrenamer.exceptions.rst  tvrenamer.manager.rst  tvrenamer.options.rst  tvrenamer.service.rst  tvrenamer.services.base.rst  tvrenamer.services.tvdb.rst  tvrenamer.services.tvrage.rst
etc/tvrenamer/: tvrenamer.conf.sample
tvrenamer/: __init__.py  api.py  cli.py  episode.py  exceptions.py  formatter.py  manager.py  options.py  parser.py  patterns.py  renamer.py  service.py
tvrenamer/cache/: api.py
tvrenamer/common/: __init__.py  _titlecase.py  table.py  tools.py
tvrenamer/core/: episode.py  formatter.py  parser.py  patterns.py  renamer.py  watcher.py
tvrenamer/services/: __init__.py  base.py  trakt_service.py  tvdb.py  tvrage.py
tvrenamer/tests/: base.py  test_api.py  test_cli.py  test_episode.py  test_formatter.py  test_manager.py  test_parser.py  test_patterns.py  test_renamer.py  test_service.py
tvrenamer/tests/cache/: test_api.py
tvrenamer/tests/common/: test_encodeutils.py  test_titlecase.py  test_tools.py
tvrenamer/tests/core/: test_episode.py  (+4 more)
(+4 files in other folders)
