[metadata]
name = tvrenamer
version = 0.1.0
author = shad7
author-email = kenny.shad7@gmail.com
summary = TV Episode Renamer
license = MIT
keywords = tv, espisode
description-file =
    README.md
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Other Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet
    Topic :: Multimedia
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    tvrenamer
data_files =
    etc/tvrenamer = etc/tvrenamer/*

[entry_points]
console_scripts =
    tvrename = tvrenamer.cli:main


data.services =
    tvdb = tvrenamer.services.tvdb:TvdbService
    tvrage = tvrenamer.services.tvrage:TvrageService


oslo.config.opts =
    tvrenamer.opts = tvrenamer.options:list_opts


[build_sphinx]
builders=html
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
